# HwLang

./: .gitignore  .gitmodules  Cargo.toml  LICENCE.txt  README.md  build.rs  hwl_docs.md  plan.md  prompt.md
bins/: fuzz  (+9 more)
python/: .gitignore  generate_profile_project.py  int_range_proofs.py  pyproject.toml  requirements.txt  run_test_verilator  test_verilator.py  wave_gui_example.json  z3_test.py
python/fuzz_expressions/: fuzz_expressions.py
python/python_module_tests/: main.py
python/src/hwl_sandbox/: conftest.py  pytest.ini
python/src/hwl_sandbox/aoc/: .gitignore  d01.kh  d01.py  hwl.toml  top.kh
python/src/hwl_sandbox/bins/: demo_basic.py  demo_verilator.py  fuzz_expressions.py  generate_profile_project.py  int_range_proofs.py
python/src/hwl_sandbox/common/: compare.py  expression.py  util.py  util_no_hwl.py
python/src/hwl_sandbox/tests/: conftest.py  test_bugs.py  test_early_exits.py  test_expression.py  test_flow.py  test_implications.py  test_interact.py  test_lang.py  test_module.py  test_names.py  test_verilog_lowering.py
python/tests/: conftest.py  test_basic.py  test_flow.py  test_implications.py  test_interact.py  test_lang.py  util.py
rust/: Cargo.toml  rustfmt.toml
rust/egg_experiment/: Cargo.toml
rust/egg_experiment/src/: main.rs
rust/fuzz/: .gitignore  Cargo.toml
rust/fuzz/fuzz_targets/: compile.rs  format.rs  parse.rs  token.rs
rust/hwl_bin/: Cargo.toml
rust/hwl_bin/src/: args.rs  build.rs  fmt.rs  lib.rs  main.rs  main_build.rs  main_fmt.rs  util.rs
rust/hwl_common/: Cargo.toml
rust/hwl_common/src/: diagnostic.rs  lib.rs  pos.rs  source.rs
rust/hwl_common/src/back/: lower_cpp.rs  lower_verilator.rs  lower_verilog.rs  mod.rs  verilator_template.cpp
rust/hwl_common/src/mid/: graph.rs  ir.rs  validate.rs
rust/hwl_common/src/util/: arena.rs  data.rs  exhaust.rs  iter.rs  mod.rs  pool.rs  range.rs  range_multi.rs  regex.rs  store.rs  sync.rs
rust/hwl_language/: Cargo.toml  build.rs
rust/hwl_language/src/: constants.rs  error.rs  lib.rs  main.rs
rust/hwl_language/src/back/: core.rs  cpp_bits.rs  lower_cpp.rs  lower_cpp_wrap.rs  lower_llvm.rs  lower_verilator.rs  lower_verilog.rs  mod.rs  todo.rs  value.rs  verilator_template.cpp  wrap_cpp.rs  wrap_verilator.rs
rust/hwl_language/src/data/: compiled.rs  diagnostic.rs  lowered.rs  mod.rs  module_body.rs  parsed.rs  source.rs
rust/hwl_language/src/front/: array.rs  assignment.rs  bits.rs  block.rs  builtin.rs  check.rs  checking.rs  common.rs  compile.rs  context.rs  ctrl_match.rs  diagnostic.rs  domain.rs  driver.rs  exit.rs  expression.rs  extra.rs  flow.rs  function.rs  implication.rs  interface.rs  ir.rs  ir_validate.rs  item.rs  lower_verilog.rs  misc.rs  mod.rs  module.rs  module_body.rs  module_header.rs  print.rs  range.rs  range_arithmetic.rs  scope.rs  signal.rs  signal_mask.rs  solver.rs  steps.rs  string.rs  types.rs  (+3 more)
rust/hwl_language/src/mid/: bits.rs  builder.rs  change_array.rs  cleanup.rs  cones.rs  graph.rs  ir.rs  ir_validate.rs  mask.rs  mod.rs  steps.rs  validate.rs
rust/hwl_language/src/new/: block.rs  check.rs  compile.rs  context.rs  expression.rs  function.rs  ir.rs  item.rs  lower_verilog.rs  misc.rs  mod.rs  module.rs  types.rs  value.rs
rust/hwl_language/src/sim/: mod.rs  recorder.rs
rust/hwl_language/src/simulator/: lower.rs  mod.rs
rust/hwl_language/src/syntax/: ast.rs  collect.rs  format.rs  format_new.rs  grammar.lalrpop  hierarchy.rs  manifest.rs  mod.rs  parsed.rs  parser.rs  pos.rs  resolve.rs  source.rs  token.rs  visitor.rs
rust/hwl_language/src/tests/: mod.rs  parser.rs  resolve.rs  test_format.kh  test_format.rs  test_format_new.rs  test_parser.rs  test_resolve.rs
rust/hwl_language/src/util/: arena.rs  big_int.rs  bit_pack.rs  data.rs  int.rs  int_repr.rs  io.rs  iter.rs  mod.rs  pool.rs  range.rs  range_multi.rs  sparse_change_array.rs  store.rs  sync.rs
rust/hwl_language/tests/: parser.rs  root.rs
rust/hwl_language/tests/root/: mod.rs
rust/hwl_lsp_server/: Cargo.toml
rust/hwl_lsp_server/src/: lib.rs  main.rs
rust/hwl_lsp_server/src/engine/: compile.rs  encode.rs  mod.rs  vfs.rs
rust/hwl_lsp_server/src/handlers/: dispatch.rs  document.rs  lifecycle.rs  mod.rs
rust/hwl_lsp_server/src/server/: compile.rs  core.rs  dispatch.rs  document.rs  language.rs  lifecycle.rs  logger.rs  mod.rs  sender.rs  settings.rs  state.rs  util.rs  vfs.rs  workspace.rs  wrapper.rs
rust/hwl_lsp_server/src/support/: find_definition.rs  find_definition_test.rs  find_usages.rs  find_usages_test.rs  mod.rs
rust/hwl_lsp_server/src/util/: encode.rs  logger.rs  mod.rs  sender.rs  uri.rs
rust/hwl_python/: Cargo.toml  hwl.pyi  pyproject.toml
rust/hwl_python/src/: check.rs  convert.rs  lib.rs
rust/hwl_sim/: Cargo.toml
rust/hwl_sim/src/: bits.rs  consts.rs  format.rs  main.rs  panels.rs  render.rs  row_render.rs  rows.rs  state.rs  time.rs  type_layout.rs  widgets.rs
rust/hwl_simulator/: Cargo.toml
rust/hwl_simulator/src/: buffer.rs  lib.rs  lower.rs  lower_module.rs  lower_process.rs  lower_types.rs  simulator.rs
rust/hwl_std/: Cargo.toml  build.rs
rust/hwl_std/src/: lib.rs
rust/hwl_std/src/std/: math.kh  types.kh  util.kh
rust/hwl_symbolic_prover/: Cargo.toml
rust/hwl_symbolic_prover/src/: expression.rs  lib.rs  problem.rs
rust/hwl_symbolic_prover/tests/root/: basic.rs
rust/hwl_util/: Cargo.toml
rust/hwl_util/src/: constants.rs  io.rs  lib.rs  swrite.rs
rust/hwl_vhdl/: Cargo.toml  build.rs
rust/hwl_vhdl/src/: lib.rs  util.rs
rust/hwl_vhdl/src/syntax/: ast.rs  grammar.lalrpop  mod.rs  parser.rs  token.rs
rust/hwl_vhdl/src/tests/: mod.rs  test_cases_ghdl.rs  test_cases_nvc.rs  test_syntax_custom.rs  test_syntax_lrm.rs
rust/hwl_wasm/: Cargo.toml  build.rs
rust/hwl_wasm/src/: initial_source.kh  lib.rs
rust/language/: Cargo.toml
rust/language/src/: error.rs  lib.rs  main.rs
rust/language/tests/: parser.rs
rust/lsp_server/: Cargo.toml
rust/lsp_server/src/: main.rs
rust/src/: error.rs  lib.rs
rust/src/resolve/: compile.rs  scope.rs
rust/src/syntax/: ast.rs  mod.rs
rust/src/util/: io.rs
(+228 files in other folders)
