[package]
name = "hwlang"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.7", features = ["derive"] }
indexmap = "2.2.6"
itertools = "0.11.0"
lalrpop-util = { version = "0.20.2", features = ["lexer", "unicode"] }
num-bigint = "0.4.5"

[build-dependencies]
lalrpop = { version = "0.20.2" }
