[workspace]
members = [
    "egg_experiment",
    "hwl_language",
    "hwl_lsp_server"
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"

[workspace.dependencies]
# internal dependencies
hwl_language = { path = "hwl_language" }

# external dependencies
annotate-snippets = "0.11.4"
anyhow = "1.0.86"
clap = { version = "4.5.7", features = ["derive"] }
crossbeam-channel = "0.5.13"
derivative = "2.2.0"
fluent-uri = "0.1.4"
indexmap = "2.2.6"
itertools = "0.13.0"
lalrpop = { version = "0.20.2" }
lalrpop-util = { version = "0.20.2", features = ["lexer", "unicode"] }
lazy_static = "1.5.0"
log = "0.4.21"
logos = "0.14.0"
lsp-server = "0.7.6"
lsp-types = "0.97.0"
num-bigint = "0.4.5"
num-traits = "0.2.19"
rand = "0.8.5"
regex = "1.10.5"
serde = "1.0.208"
serde_json = "1.0.125"
strum = { version = "0.26.3", features = ["derive"] }
unwrap-match = "0.1.0"
