[workspace]
members = [
    "hwl_language",
    "hwl_lsp_server",
    "hwl_wasm",
    # "hwl_python",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"

[workspace.dependencies]
# internal dependencies
hwl_language = { path = "hwl_language" }

# external dependencies
annotate-snippets = "0.11.5"
anyhow = "1.0.86"
clap = { version = "4.5.7", features = ["derive"] }
console_error_panic_hook = "0.1.7"
crossbeam-channel = "0.5.13"
derivative = "2.2.0"
derive_more = { version = "1.0.0", features = ["from"] }
fluent-uri = "0.1.4"
getrandom = "0.2.15" # keep in sync with random
indexmap = "2.2.6"
itertools = "0.13.0"
lalrpop = { version = "0.20.2" }
lalrpop-util = { version = "0.20.2", features = ["lexer", "unicode"] }
lazy_static = "1.5.0"
log = "0.4.21"
logos = "0.14.0"
lsp-server = "0.7.6"
lsp-types = "0.97.0"
memchr = "2.7.4"
num_cpus = "1.16.0"
num-bigint = "0.4.5"
num-integer = "0.1.46"
num-traits = "0.2.19"
parking_lot = "0.12.3"
pyo3 = { version = "0.24.0", features = ["extension-module", "num-bigint"] } # TODO specify ABI?
rand = "0.8.5"
regex = "1.10.5"
serde = "1.0.208"
serde_json = "1.0.125"
strum = { version = "0.26.3", features = ["derive"] }
unwrap-match = "0.1.0"
wasm-bindgen = "0.2.84"

[profile.release]
debug = 2

[workspace.lints.clippy]
# Things that are not yet implemented should report diagnostics, not crash the compiler.
todo = "warn"
unimplemented = "warn"

# Some overly pedantic lints.
type_complexity = "allow"
too_many_arguments = "allow"
len_without_is_empty = "allow"
new_without_default = "allow"
get_first = "allow"

# These should be investigated and fixed and some point.
result_large_err = "allow"
large_enum_variant = "allow"

# Allow some cfgs that are set by wasm
[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(wasm_bindgen_unstable_test_coverage)'] }
