[workspace]
members = [
    "hwl_language",
    "hwl_util",
    "hwl_bin",
    "hwl_lsp_server",
    "hwl_wasm",
    "hwl_python",
    "fuzz",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.88.0"

[workspace.dependencies]
# internal dependencies
hwl_util = { path = "hwl_util" }
hwl_language = { path = "hwl_language" }

# external dependencies
annotate-snippets = "0.11.5"
clap = { version = "4.5.7", features = ["derive"] }
console_error_panic_hook = "0.1.7"
crossbeam-channel = "0.5.13"
ctrlc = "3.4.6"
dashmap = "6.1.0"
derive_more = { version = "2.0.1", features = ["from"] }
dlopen2 = "0.8.0"
fluent-uri = "0.1.4"
getrandom = "0.2.15" # keep in sync with random
indexmap = "2.2.6"
itertools = "0.13.0"
lalrpop = { version = "0.20.2", features = [] }
lalrpop-util = { version = "0.20.2", features = [] }
lazy_static = "1.5.0"
lsp-server = "0.7.6"
lsp-types = "0.97.0"
mimalloc = "0.1.46"
num-bigint = "0.4.5"
num-integer = "0.1.46"
num-traits = "0.2.19"
num_cpus = "1.16.0"
path-clean = "1.0.1"
pyo3 = { version = "0.24.0", features = ["extension-module", "num-bigint"] } # TODO specify ABI?
rand = "0.8.5"
regex = { version = "1.10.5", features = ["perf"] }
regex-automata = { version = "0.4.9", features = ["perf"] }
serde = "1.0.208"
serde_json = { version = "1.0.125", features = ["preserve_order"] }
strum = { version = "0.26.3", features = ["derive"] }
toml = "0.9.2"
unwrap-match = "0.1.0"
wasm-bindgen = "0.2.84"
wasm-timer = "0.2.5"

[profile.release]
debug = 2

#[profile.dev.build-override]
# Enable optimization for larlpop build
#opt-level = 3

[workspace.metadata.clippy]
allow-print-in-tests = true

[workspace.lints.clippy]
# Bare prints are suspicious in library code, and can even cause the LSP to crash.
print_stdout = "warn"
print_stderr = "warn"

# Things that are not yet implemented should report diagnostics, not crash the compiler.
todo = "warn"
unimplemented = "warn"

# Some overly pedantic lints.
type_complexity = "allow"
too_many_arguments = "allow"
len_without_is_empty = "allow"
new_without_default = "allow"
get_first = "allow"
needless_range_loop = "allow"
ptr_arg = "allow"
single_match = "allow"
single_range_in_vec_init = "allow"

# These should be investigated and fixed and some point.
result_large_err = "allow"
large_enum_variant = "allow"

[workspace.lints.rust]
# Correct error handling is very important, force it.
unused_must_use = "deny"

# Allow some cfgs that are set by wasm
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(wasm_bindgen_unstable_test_coverage)'] }
