[package]
name = "hwl_bin"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
default-run = "hwl_bin"

[dependencies]
hwl_util.workspace = true
hwl_language.workspace = true

clap.workspace = true
ctrlc.workspace = true
mimalloc.workspace = true
num_cpus.workspace = true
toml.workspace = true

[lints]
workspace = true
