[package]
name = "hwl_bin"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
default-run = "hwl_bin"

[lints]
workspace = true

[dependencies]
hwl_common.workspace = true
hwl_language.workspace = true
hwl_util.workspace = true

clap.workspace = true
ctrlc.workspace = true
indexmap.workspace = true
itertools.workspace = true
mimalloc.workspace = true
path-clean.workspace = true
