[package]
name = "hwl_common"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
hwl_util.workspace = true

annotate-snippets.workspace = true
dashmap.workspace = true
derive_more.workspace = true
fnv.workspace = true
indexmap = { workspace = true }
itertools.workspace = true
lazy_static.workspace = true
num-bigint.workspace = true
num-integer.workspace = true
num-traits.workspace = true
num_cpus.workspace = true
rand.workspace = true
regex-automata.workspace = true
regex.workspace = true
unwrap-match.workspace = true
yastl.workspace = true