[package]
name = "hwl_language"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
annotate-snippets.workspace = true
dashmap.workspace = true
dlopen2.workspace = true
indexmap.workspace = true
itertools.workspace = true
lalrpop-util.workspace = true
lazy_static.workspace = true
num-bigint.workspace = true
num-integer.workspace = true
num-traits.workspace = true
parking_lot.workspace = true
rand.workspace = true
regex.workspace = true
strum.workspace = true
unwrap-match.workspace = true

[build-dependencies]
lalrpop.workspace = true

[lints]
workspace = true
