[package]
name = "hwl_language"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[features]
wrap_verilator = ["dep:dlopen2"]

[dependencies]
hwl_util.workspace = true

annotate-snippets.workspace = true
dashmap.workspace = true
derive_more.workspace = true
dlopen2 = { workspace = true, optional = true }
indexmap = { workspace = true, features = ["serde"] }
itertools.workspace = true
lalrpop-util.workspace = true
lazy_static.workspace = true
num-bigint.workspace = true
num-integer.workspace = true
num-traits.workspace = true
path-clean.workspace = true
rand.workspace = true
regex-automata.workspace = true
regex.workspace = true
serde = { workspace = true, features = ["serde_derive"] }
serde_json.workspace = true
strum.workspace = true
toml = { workspace = true, features = ["preserve_order"] }
unwrap-match.workspace = true

[build-dependencies]
lalrpop.workspace = true

[lints]
workspace = true
