[package]
name = "hwl_lsp_server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
hwl_language.workspace = true
hwl_util.workspace = true

annotate-snippets.workspace = true
crossbeam-channel.workspace = true
fluent-uri.workspace = true
indexmap.workspace = true
itertools.workspace = true
lsp-server.workspace = true
lsp-types.workspace = true
serde_json.workspace = true
strum.workspace = true
mimalloc.workspace = true

[lints]
workspace = true
