[package]
name = "hwl_python"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
name = "hwl"
crate-type = ["cdylib"]

[dependencies]
hwl_language = { workspace = true, features = ["wrap_verilator"] }
hwl_util = { workspace = true }

itertools.workspace = true
num-bigint.workspace = true
num_cpus.workspace = true
pyo3.workspace = true
