[package]
name = "hwl_python"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[lib]
name = "hwl"
crate-type = ["cdylib"]

[dependencies]
hwl_util = { workspace = true }
hwl_common = { workspace = true }
hwl_language = { workspace = true, features = ["wrap_verilator"] }

itertools.workspace = true
num-bigint.workspace = true
pyo3.workspace = true
