[package]
name = "hwl_vhdl"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
hwl_util.workspace = true
hwl_common.workspace = true

itertools.workspace = true
lalrpop-util.workspace = true
lazy_static.workspace = true
strum.workspace = true

[build-dependencies]
lalrpop.workspace = true
