[package]
name = "hwl_wasm"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
hwl_language.workspace = true
itertools.workspace = true
strum.workspace = true
wasm-bindgen.workspace = true
console_error_panic_hook.workspace = true

# We're building for a JS environment, tell getrandom it can use the JS random generator.
getrandom = { workspace = true, features = ["js"] }

[package.metadata.wasm-pack.profile.dev]
wasm-opt = false
