[package]
name = "hwl_wasm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[build-dependencies]
hwl_util.workspace = true
itertools.workspace = true

[dependencies]
console_error_panic_hook.workspace = true
hwl_language.workspace = true
itertools.workspace = true
strum.workspace = true
wasm-bindgen.workspace = true
wasm-timer.workspace = true

# We're building for a JS environment, tell getrandom it should use the JS random generator.
getrandom = { workspace = true, features = ["js"] }

[package.metadata.wasm-pack.profile.dev]
wasm-opt = false

[lints]
workspace = true
