[package]
name = "language"
version.workspace = true
edition.workspace = true

[dependencies]
annotate-snippets.workspace = true
clap.workspace = true
derivative = "2.2.0"
indexmap.workspace = true
itertools.workspace = true
lalrpop-util.workspace = true
lazy_static.workspace = true
logos.workspace = true
num-bigint.workspace = true
num-traits.workspace = true
regex.workspace = true
strum.workspace = true

[build-dependencies]
lalrpop.workspace = true
